<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_most_popular">Most Popular</string>
    <string name="action_highest_rated">Highest Rated</string>
    <string name="image_description">Image description</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date:</string>
    <string name="vote_average">5.0</string>
    <string name="nov_2017">NOV 2017</string>
    <string name="movie_title">Movie Title</string>
    <string name="no_internet">Internet is not available</string>
</resources>
