<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_backdrop_path"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/placeholder" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/image_view_poster_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/placeholder" />

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/movie_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionMode.Title"
                app:layout_constraintStart_toEndOf="@+id/image_view_poster_path"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/release_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/nov_2017"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/release_date_label"
                app:layout_constraintTop_toBottomOf="@+id/title_text_view"
                app:layout_constraintVertical_bias="0.0" />

            <RatingBar
                android:id="@+id/vote_average_rating_bar"
                style="@android:style/Widget.Holo.Light.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/release_date_label"
                app:layout_constraintTop_toBottomOf="@+id/release_date_label" />

            <TextView
                android:id="@+id/vote_average_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/vote_average"
                app:layout_constraintStart_toEndOf="@+id/vote_average_rating_bar"
                app:layout_constraintTop_toTopOf="@+id/vote_average_rating_bar" />

            <TextView
                android:id="@+id/release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/release_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/title_text_view"
                app:layout_constraintTop_toBottomOf="@+id/title_text_view"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_view_poster_path" />


        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>